--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,4 +3,6 @@
 ---
 fixtures:
   forge_modules:
-#     stdlib: "puppetlabs/stdlib"
+    stdlib: puppetlabs/stdlib
+    systemd: camptocamp/systemd
+    archive: puppet/archive
