--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ notifications:
   email:
     recipients:
     - gary@theclarkhome.com
-    on_success: never
+    on_success: change
     on_failure: always
 deploy:
   provider: puppetforge
