--- a/spec/default_module_facts.yml
+++ b/spec/default_module_facts.yml
@@ -2,4 +2,4 @@
 #
 # Facts specified here will override the values provided by rspec-puppet-facts.
 ---
-xtelly_version: "1.2.3"
+telly_version: "1.2.3"
